--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon promises/1_simple.js"
+    "dev": "nodemon promises/3_axios_arrow.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.2",
+    "needle": "^3.1.0",
     "nodemon": "^2.0.20",
     "request": "^2.88.2",
     "xmlhttprequest": "^1.8.0"
